# dataclue

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  analyze.py  blogs.py  correlation.py  descriptive.py  health.py  hypothesis.py  normality.py  other.py  parse_data.py  regression.py  survey.py  tests_catalog.py
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/data/: blog_seed.py
backend/app/schemas/: blog.py  common.py  correlation.py  descriptive.py  hypothesis.py  regression.py
backend/app/services/: admin_service.py  blog_service.py  chart_helpers.py  classification_models.py  column_utils.py  ml_preprocessing.py  regression_models.py  statistical_engine.py  survey_engine.py  time_series_models.py
backend/app/services/descriptive/: summary.py
backend/app/services/hypothesis/: ttest.py
backend/app/utils/: data_parser.py
backend/tests/: test_blogs.py  test_health.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/content/: faq.ts
frontend/src/data/: chartData.ts  statisticalTests.ts
frontend/src/lib/: adminAuth.ts  adminNavigation.ts  api.ts  blogApi.ts  calculatorLinks.ts  classificationAdvanced.ts  classificationModels.ts  csvPreview.ts  exportData.ts  exportResults.ts  featureTransform.ts  motion.ts  parseUploadedFile.ts  seo.ts  site.ts  (+8 more)
(+95 files in other folders)
